tests/errors/class_access_violations.sad
model Account {
    secret attr <balance>
    init(b) {
        balance: b
    }
}
a = Account(100)
show(a.balance)
